# research_towr

./: README.md
catkin_towr_backup/build_isolated/: catkin_make_isolated.cache
catkin_towr_backup/build_isolated/towr_ros/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_towr_backup/build_isolated/wheelleg_description_ver12/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_towr_backup/build_isolated/wheelleg_description_ver13/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_towr_backup/build_isolated/wheelleg_description_ver14/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
catkin_towr_backup/build_isolated/wheelleg_description_ver15/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  (+2 more)
catkin_towr_backup/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
catkin_towr_backup/src/wheelleg_description_ver12/: CMakeLists.txt  package.xml
catkin_towr_backup/src/wheelleg_description_ver12/config/: joint_names_wheelleg_description_ver12.yaml
catkin_towr_backup/src/wheelleg_description_ver12/launch/: display.launch  gazebo.launch
catkin_towr_backup/src/wheelleg_description_ver12/meshes/: LF_k.STL  LF_w.STL  LH_k.STL  LH_w.STL  RF_k.STL  RF_w.STL  RH_k.STL  RH_w.STL
catkin_towr_backup/src/wheelleg_description_ver12/urdf/: RF_wheelleg_leg_ver3.urdf.xacro  wheelleg_description_ver12.csv  wheelleg_description_ver12.urdf  wheelleg_total_ver3.urdf.xacro
(+445 files in other folders)
